@@ -207,7 +207,7 @@ class TestNativeCommit(TestCaseWithSubversionRepository):
                 self.client_get_prop("dc", "bzr:revision-id:v%d-none" % MAPPING_VERSION, 2))
 
         self.assertEqual(
-                "timestamp: Thu 1970-01-01 01:15:36.000000000 +0000\ncommitter: fry\n",
+                "timestamp: 1970-01-01 01:15:36.000000000 +0000\ncommitter: fry\n",
                 self.client_get_prop("dc", "bzr:revision-info", 2))
 
     def test_mwh(self):
